--- a/resources/views/cups/index,antlers.html
+++ b/resources/views/cups/index,antlers.html
@@ -126,7 +126,7 @@
                     <img class="object-cover w-full h-48 mt-2" src="{{ assets_field }}" alt="">
 
                     <div class="flex items-center justify-between px-4 py-2 bg-gray-900">
-                        <h1 class="text-lg font-bold text-white">18000 kr</h1>
+                        <h1 class="text-lg font-bold text-white"></h1>
 
                     </div>
                 </div>
