--- a/resources/views/travel_camp/index.antlers.html
+++ b/resources/views/travel_camp/index.antlers.html
@@ -46,7 +46,10 @@
                 <div class="w-full lg:w-1/2">
                     <div class="lg:max-w-lg">
                         <h1 class="text-2xl font-semibold text-gray-800 uppercase dark:text-white lg:text-3xl">Träningsresor</h1>
-                        <p class="mt-2 text-gray-600 text-xl mr-2">Sportcation Sportresor har mer än 40 års erfarenhet av sportresebranschen och erbjuder ett brett utbud av bland annat träningsläger, cuper, fotbollsresor, konferensresor, NHL-, tennis- och formel 1-resor. Hos oss står resenären och upplevelsen i centrum och vi strävar alltid efter att ge våra resenärer bästa möjliga service. Vi är experter på sportresor, och varje år reser nästan 20 000 nöjda resenärer med oss. Välkommen att boka din resa med Sportcation Sportresor!</p>
+                        <p class="mt-2 text-gray-600 text-xl mr-2">Sportcation Sportresor har mer än 40 års erfarenhet av sportresebranschen och erbjuder ett brett utbud av bland annat träningsläger, cuper, fotbollsresor, konferensresor, NHL-, tennis- och formel 1-resor. Hos oss står resenären
+                            och upplevelsen i centrum och vi strävar alltid efter att ge våra resenärer bästa möjliga service. Vi är experter på sportresor, och varje år reser nästan 20 000 nöjda resenärer med oss. Välkommen att boka din resa med Sportcation
+                            Sportresor!
+                        </p>
 
                     </div>
                 </div>
@@ -55,40 +58,40 @@
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1521322124276-fc5ab764051e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="image" />
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1531670854490-1e1c7d7bfcb6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="image" />
                             </div>
                             <div class="swiper-slide">
-                                <img class="object-cover w-full h-96" src=https://images.unsplash.com/photo-1431274172761-fca41d930114?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                                <img class="object-cover w-full h-96" src=https://images.unsplash.com/photo-1431274172761-fca41d930114?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80 " alt="image " />
                             </div>
-                            <div class="swiper-slide">
-                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1600596267466-a9fc21632101?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            <div class="swiper-slide ">
+                                <img class="object-cover w-full h-96 " src="https://images.unsplash.com/photo-1600596267466-a9fc21632101?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80 " alt="image " />
                             </div>
-                            <div class="swiper-slide">
-                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1572005707350-931169351ab3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="image" />
+                            <div class="swiper-slide ">
+                                <img class="object-cover w-full h-96 " src="https://images.unsplash.com/photo-1572005707350-931169351ab3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80 " alt="image " />
                             </div>
-                            <div class="swiper-slide">
-                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1607427293702-036933bbf746?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" alt="image" />
+                            <div class="swiper-slide ">
+                                <img class="object-cover w-full h-96 " src="https://images.unsplash.com/photo-1607427293702-036933bbf746?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80 " alt="image " />
                             </div>
 
                         </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-next "></div>
+                        <div class="swiper-button-prev "></div>
+                        <div class="swiper-pagination "></div>
                     </div>
-                    <h2 class="text-3xl"></h2>
+                    <h2 class="text-3xl "></h2>
                 </div>
 
 
-                <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
                 <script>
-                    var swiper = new Swiper(".mySwiper", {
+                    var swiper = new Swiper(".mySwiper ", {
                         cssMode: true,
                         navigation: {
-                            nextEl: ".swiper-button-next",
-                            prevEl: ".swiper-button-prev",
+                            nextEl: ".swiper-button-next ",
+                            prevEl: ".swiper-button-prev ",
                         },
                         pagination: {
-                            el: ".swiper-pagination",
+                            el: ".swiper-pagination ",
                         },
                         mousewheel: true,
                         keyboard: true,
@@ -101,28 +104,31 @@
 </div>
 
 
-<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2 flex">
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2 flex ">
 
 
     <div>
-        <h2 class="text-center text-2xl my-3">Detaljer om våra resor</h2>
-        <p class="text-center text-lg my-3">Fotbollsresor till >Champions League. Vi skräddarsyr er fotbollsresa enligt era önskemål och har efter 40 år i sportresebranschen ett fantastiskt nätverk runt om i Europa och kan därför erbjuda er förmånliga priser och kvalitativa fotbollsresor.</p>
+        <h2 class="text-center text-2xl my-3 ">Detaljer om våra resor</h2>
+        <p class="text-center text-lg my-3 ">Fotbollsresor till >Champions League. Vi skräddarsyr er fotbollsresa enligt era önskemål och har efter 40 år i sportresebranschen ett fantastiskt nätverk runt om i Europa och kan därför erbjuda er förmånliga priser och kvalitativa fotbollsresor.</p>
         {{ collection:travel_camp }}
-        <a href="{{ url }}">
+        <a href="{{ url }} ">
             {{ /collection:travel_camp }}
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap ">
 
-                {{ collection:travel_camp limit="6" }}
+                {{ collection:travel_camp limit="6 " }}
 
-                <div class="max-w-xs mx-auto overflow-hidden bg-gray-200 rounded-lg shadow-lg my-7 hover:bg-black">
-                    <div class="px-4 py-2 hover:text-white">
+                <div class="max-w-xs mx-auto overflow-hidden bg-gray-200 rounded-lg shadow-lg my-7 hover:bg-black ">
+                    <div class="px-4 py-2 hover:text-white ">
+
                         <h1 class="text-3xl font-bold text-gray-500 uppercase ">{{ title }}</h1>
+
                     </div>
 
-                    <img class="object-cover w-full h-48 mt-2" src="{{ assets_field }}" alt="">
+                    <img class="object-cover w-full h-48 mt-2 " src="{{ assets_field }} " alt=" ">
 
-                    <div class="flex items-center justify-between px-4 py-2 bg-gray-900">
-                        <h2 class="text-lg font-bold text-white">{{ tagline }}</h2>
+                    <div class="flex flex-col items-center justify-between px-4 py-2 bg-gray-900 ">
+                        <h2 class="text-lg font-bold text-white ">{{ tagline }}</h2>
+                        <h2 class="text-lg font-bold text-white ">{{ namn_i_meny }}</h2>
 
                     </div>
                 </div>
@@ -131,13 +137,61 @@
             </div>
         </a>
         <hr>
-        <h2 class="mt-16 text-center text-3xl">Kundernas Omdömen</h2>
+        <h2 class="mt-16 text-center text-3xl ">Kundernas Omdömen</h2>
 
+        <div class="flex flex-wrap ">
+
+            {{ collection:travel_camp limit="3 " }}
+
+            <div class="max-w-xs mx-auto overflow-hidden bg-gray-200 rounded-lg shadow-lg my-7 hover:bg-black ">
+                <div class="px-4 py-2 hover:text-white ">
+
+                    <h1 class="text-3xl font-bold text-gray-500 uppercase ">{{ title }}</h1>
+
+                </div>
+
+                <img class="object-cover w-full h-48 mt-2 " src="{{ assets_field }} " alt=" ">
+
+                <div class="flex flex-col items-center justify-between px-4 py-2 bg-gray-900 ">
+                    <ul class="flex justify-center ">
+
+                        <li>
+                            <svg aria-hidden="true " focusable="false " data-prefix="fas " data-icon="star " class="w-4 text-yellow-500 mr-1 " role="img " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 576 512 ">
+                            <path fill="currentColor " d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382
+                                    150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path>
+                          </svg>
+                        </li>
+                        <li>
+                            <svg aria-hidden="true " focusable="false " data-prefix="fas " data-icon="star " class="w-4 text-yellow-500 mr-1 " role="img " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 576 512 ">
+                            <path fill="currentColor " d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382
+                                    150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path>
+                          </svg>
+                        </li>
+                        <li>
+                            <svg aria-hidden="true " focusable="false " data-prefix="fas " data-icon="star " class="w-4 text-yellow-500 mr-1 " role="img " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 576 512 ">
+                            <path fill="currentColor " d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382
+                                    150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path>
+                          </svg>
+                        </li>
+                        <li>
+                            <svg aria-hidden="true " focusable="false " data-prefix="far " data-icon="star " class="w-4 text-yellow-500 mr-1 " role="img " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 576 512 ">
+                            <path fill="currentColor " d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2
+                                    50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z "></path>
+                          </svg>
+                        </li>
+                        <li>
+                            <svg aria-hidden="true " focusable="false " data-prefix="far " data-icon="star " class="w-4 text-yellow-500 " role="img " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 576 512 ">
+                            <path fill="currentColor " d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2
+                                    50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z "></path>
+                          </svg>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            {{ /collection:travel_camp }}
+        </div>
 
     </div>
-
-
-
-
 
 </div>
