--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -38,8 +38,8 @@
             <form action="/search">
                 <div class="flex flex-wrap justify-between md:flex-row">
 
-                    <input type="search" name="q" value="{{ get:q }}" class="p-2 m-1 text-md text-gray-700 bg-transparent appearance-none focus:outline-none focus:placeholder-transparent max-w-md" placeholder="Sök" aria-label="Resor">
-                    <button class="w-full px-3 py-2 m-1 text-sm font-medium tracking-wider text-white uppercase transition-colors duration-200 transform bg-gray-800 rounded-md dark:hover:bg-gray-600 dark:bg-gray-700 lg:w-auto hover:bg-gray-700">Sök</button>
+                    <input type="search" name="q" value="{{ get:q }}" class="p-2 m-1 text-md text-gray-700 bg-transparent appearance-none focus:outline-none focus:placeholder-transparent w-full" placeholder="Sök" aria-label="Resor">
+                    <button class="w-full px-3 py-2 m-1 text-sm font-medium tracking-wider text-white uppercase transition-colors duration-200 transform bg-gray-800 rounded-md hover:bg-gray-700">Sök</button>
 
                 </div>
             </form>
