--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -88,7 +88,7 @@
 
                         {{ collection:wcm_travel limit="6" }}
                         <div class="">
-                            <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
+                            <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Travel places" />
                             <div class="mt-2">
                                 <div class="flex flex-col">
                                     <h3 class="text-md font-bold text-gray-700 dark:text-gray-200">{{ title }}</h3>
