--- a/resources/views/travel_matches/show.antlers.html
+++ b/resources/views/travel_matches/show.antlers.html
@@ -5,9 +5,14 @@
         <div class="items-center lg:flex">
             <div class="lg:w-1/2">
                 <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100">{{ title }}</h1>
-
-                <p class="mt-4 text-gray-500 dark:text-gray-400 lg:max-w-md">
+                <p class="mt-4 font-bold text-xl text-gray-500 dark:text-gray-400 lg:max-w-md">
+                    Arena: {{ travel_arena }}</p>
+                <p class="mt-4 font-bold text-xl text-gray-500 dark:text-gray-400 lg:max-w-md">
+                    Datum för resa: {{ travel_from_date }}</p>
+                <p class="mt-4 text-gray-500 lg:max-w-md tracking-wider leading-6">
                     {{ content }}</p>
+
+
 
                 <div class="text-center bg-blue-500 text-white text-lg rounded-md my-4">
                     <a class=" " href="{{ olka_express_knapp-lank }}">Beställning och Priser</a>
